Make landing page visually more appealing with background image etc
Image CC0 (public domain), source:
https://commons.wikimedia.org/wiki/Maps_of_the_world#/media/File:Eckert4.jpg

--- a/index.html
+++ b/index.html
@@ -17,36 +17,61 @@
   </script>
 
   <style type="text/css">
+  /* Ensure are fills entire screen */
   html {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
   }
+
   body {
     color: #fff;
     background-color: #eee;
     font-family: Roboto,Arial,sans-serif;
     text-align: center;
+    font-size: 18px;
+    line-height: 1.4;
+
+    /* Ensure are fills entire screen */
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
   }
 
+  .overlay {
+    background-image: url('website-background.jpg');
+
+    /* Ensure overlay fills whole screen */
+    width: 100%;
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    /* Add the blur effect */
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+  }
+
   .cover {
-    width: 510px;
-    vertical-align: middle;
-    /* height: 220px; */
-    margin: -110px 0 0 -260px;
+    /* Position box in the middle of screen area */
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+
+    /* Don't get too wide or too narrow on very big or small screens */
+    max-width: 550px;
+    min-width: 330px;
+
+    z-index: 2;
     background-color: #222d; /* d = transparency */
     border-radius: 8px;
     padding: 0 20px
-    font-size: 18px;
-    line-height: 1.4
   }
 
   h1 {
@@ -67,15 +92,26 @@
   form {
     margin: 12px;
   }
+
+  /* Make call-to-action elements stand out */
+  input, button {
+    padding: 6px;
+    font-size: 18px;
+    line-height: 1.4
+  }
   </style>
 </head>
 
 <body>
+  <div class="overlay"></div>
 
   <div class="cover">
     <h1>The Fever Map</h1>
+
     <p>Current methods of tracking the spread of the Corona virus do not yield a complete picture. It is far to slow and cumbersome to test everybody, and there isn't enough tests anyway.</p>
+
     <p>The Fever Map is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.</p>
+
     <p>To participate, just sign up and use 1 minute once a day on the app.</p>
 
     <div id="phplistsubscriberesult"></div>
@@ -84,7 +120,7 @@
       <button type="submit" id="phplistsubscribe">Sign up</button>
     </form>
 
-    <p>We are currently working on creating the app and the system behind it. Sign up below to be notified when you can start participating. We need a lot of users!</p>
+    <p><em>We are currently working on creating the app and the system behind it. Sign up to be notified when you can start participating. We need a lot of users!</em></p>
 
   </div>
 
