Add footer link to Gitlab

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   a {
     text-decoration: none;
-    color: #fff;
+    color: #7bd;
   }
 
   form {
@@ -136,6 +136,7 @@
 
       <p><em>We are currently working on creating the app and the system behind it. Sign up to be notified when you can start participating. We need a lot of users!</em></p>
 
+      <footer><small>Contribute on <a href="https://gitlab.com/fevermap/">Gitlab</a><small></footer>
     </div>
   </div>
 
