Ensure the top of the landing page is always visible using min-height

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <style type="text/css">
   /* Ensure are fills entire screen */
   html {
+    min-height: 800px;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -78,7 +79,7 @@
     z-index: 2;
     background-color: #222d; /* d = transparency */
     border-radius: 8px;
-    padding: 0 20px
+    padding: 0 20px;
   }
 
   h1 {
