Fix typo in the intro

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="cover">
       <h1>The Fever Map</h1>
 
-      <p>Current methods of tracking the spread of the Corona virus do not yield a complete picture. It is far to slow and cumbersome to test everybody, and there isn't enough tests anyway.</p>
+      <p>Current methods of tracking the spread of the Corona virus do not yield a complete picture. It is far too slow and cumbersome to test everybody, and there isn't enough tests anyway.</p>
 
       <p>The Fever Map is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.</p>
 
