Update and extend documentation for new participants
- Use "Fevermap" in a unified way everywhere. This was voted as the best
  variant of the name on hackathon Slack today.
- Explain front-end and back-end, their difference and what skills are
  needed to contribute to them.
- Extend the main README with easy steps how to participate.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,7 +26,7 @@
     <link rel="icon" type="png" sizes="192x192" href="/icon-192x192.png">
     <link rel="apple-touch-icon" type="png" sizes="192x192" href="/icon-192x192.png">
 
-    <title>Fever Map</title>
+    <title>Fevermap</title>
     <meta name="theme-color" content="#ff7a04" />
 </head>
 
