--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fever Map</title>
+  <title>Fevermap</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160636162-1"></script>
@@ -121,11 +121,11 @@
 
   <div class="cover-wrapper">
     <div class="cover">
-      <h1>The Fever Map</h1>
+      <h1>The Fevermap</h1>
 
       <p>Current methods of tracking the spread of the Corona virus do not yield a complete picture. It is far too slow and cumbersome to test everybody, and there isn't enough tests anyway.</p>
 
-      <p>The Fever Map is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.</p>
+      <p>The Fevermap is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.</p>
 
       <p>To participate, just sign up and use 1 minute once a day on the app.</p>
 
