--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160636162-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-
-gtag('config', 'UA-160636162-1');
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-160636162-1');
     </script>
 
     <link rel="stylesheet" href="index.css">
@@ -24,48 +23,56 @@ gtag('config', 'UA-160636162-1');
     <main>
       <h1>Mission</h1>
 
-      <section>
+      <section id="main">
         <p>Our goal is to help citizens, communities, and society as a whole in the fight against the coronavirus pandemic. The current scale of testing does not allow healthcare professionals to monitor the spread of the virus well enough.</p>
-        <br/>
-        <p>Fevermap is an effort to fix this by having ordinary people around the world self-report their fever and accompanying symptoms. Using crowdsourced data collection methods, we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic</p>
         <p>The Fevermap is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.</p>
-        <br />
-        <a class="cta" href="https://dev.fevermap.net">Go to Fevermap</a>
+        <p><strong>Sign up to get an announcement when we launch!</strong></p>
+        <!-- a class="cta" href="https://dev.fevermap.net">Test our to Fevermap</a -->
       </section>
-      <div class="spacer"></div>
-      <section class="breaker">
-        <h2>How you can help</h2>
-        <div class="flex-wrapper">
-          <div class="flex-item">
-            <h4>Join us on slack</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
-            <a class="cta" href="https://join.slack.com/t/hackthecrisisfinland/shared_invite/zt-cv34hdk4-hI9chEn0cUF~MAQBFqCvhg">Join Slack</a>
-          </div>
-          <div class="flex-item">
-            <h4>Sign up &amp; start using</h4>
-            <p>Sed ut perspiciatis unde explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
-          </div>
-          <div class="flex-item">
-            <h4>Contribute on gitlab</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
-            <a class="cta" href="https://gitlab.com/fevermap/">View on GitLab</a>
-          </div>
-          <div class="flex-item">
-            <h4>Tell your friends</h4>
-            <p>Sed ut perspiciatis unde explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
-          </div>
-        </div>
-      </section>
-      <div class="spacer"></div>
       <section style="padding: 0rem 4rem;">
         <div id="phplistsubscriberesult"></div>
         <form action="https://fevermap.hosted.phplist.com/lists/?p=subscribe&id=1" method="post" id="phplistsubscribeform">
           <input type="text" name="email" value="" id="emailaddress" placeholder="email@example.com" />
           <button type="submit" id="phplistsubscribe" class="cta">Sign up</button>
         </form>
-        <p>We will send timely updates about Fevermap progress. No spam. If you wish to stop recieving info from us, send a message to <a href="mailto:contact@fevermap.com">contact@fevermap.com</a></p>
       </section>
       <div class="spacer"></div>
+      <section class="breaker">
+        <h2>How you can help</h2>
+        <div class="flex-wrapper">
+          <div class="flex-item">
+            <h4>Sign up &amp; start using</h4>
+            <p>To participate, just report your fever and other symptoms anonymously once a day on the app. We will launch very soon. Stay tuned!</p>
+          </div>
+          <div class="flex-item">
+            <h4>Tell your friends</h4>
+            <p>Follow our social media accounts and share our announcements:
+              <ul>
+                <li><a href="https://twitter.com/fevermap">Twitter</a></li>
+                <li><a href="https://www.instagram.com/fevermap/">Instagram</a></li>
+                <li><a href="https://www.facebook.com/Fevermap-106608140981693/">Facebook</a></li>
+                <li><a href="https://www.youtube.com/channel/UCSGgeNTHswP5alT1NXu-SfA">Youtube</a></li>
+              </ul>
+            </p>
+          </div>
+          <div class="flex-item">
+            <h4>Collaborate with us</h4>
+            <p>If you represent a health authority and would like to have this app deployed in your region, please send us email at <a href="mailto:contact@fevermap.net">contact@fevermap.net</a>.</p>
+            <p>If you represent some other organization that could benefit of this, work on similar technology or for whatever reason want to collaborate, contact us by email on the address above. We are open to collaboration!</p>
+            <a class="cta" href="https://join.slack.com/t/hackthecrisisfinland/shared_invite/zt-cv34hdk4-hI9chEn0cUF~MAQBFqCvhg">Join Slack</a>
+          </div>
+          <div class="flex-item">
+            <h4>Develop and analyze</h4>
+            <p>We invite all open source and open data minded people to contribute to this effort in fighting the Corona virus outbreak with software.</p>
+            <a class="cta" href="https://gitlab.com/fevermap/fevermap/">View on GitLab</a>
+          </div>
+        </div>
+      </section>
+      <section id="presentations">
+        <h2>Learn more</h2>
+        <iframe id="slideshare" src="https://www.slideshare.net/slideshow/embed_code/key/C2052GZlGB2PxU" width="490" height="400" frameborder="0" scrolling="no" allowfullscreen> </iframe>
+        <iframe id="youtube" width="711" height="400" src="https://www.youtube.com/embed/7wqdTifGiPc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </section>
       <footer>
         <div class="soc-wrapper">
           <a href="https://twitter.com/fevermap" aria-label="twitter account">
