Feat: Updated app icon

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -18,13 +18,13 @@
     <meta name="msapplication-starturl" content="/">
 
     <link rel="icon" type="png" sizes="64x64" href="/icon-64x64.png">
-    <link rel="apple-touch-icon" type="png" sizes="72x96" href="/icon-72x72.png">
+    <link rel="apple-touch-icon" type="png" sizes="72x96" href="/app-icon-72x72.png">
     <link rel="icon" type="png" sizes="96x96" href="/icon-96x96.png">
-    <link rel="apple-touch-icon" type="png" sizes="96x96" href="/icon-96x96.png">
+    <link rel="apple-touch-icon" type="png" sizes="96x96" href="/app-icon-96x96.png">
     <link rel="icon" type="png" sizes="128x128" href="/icon-128x128.png">
-    <link rel="apple-touch-icon" type="png" sizes="128x128" href="/icon-128x128.png">
+    <link rel="apple-touch-icon" type="png" sizes="128x128" href="/app-icon-128x128.png">
     <link rel="icon" type="png" sizes="192x192" href="/icon-192x192.png">
-    <link rel="apple-touch-icon" type="png" sizes="192x192" href="/icon-192x192.png">
+    <link rel="apple-touch-icon" type="png" sizes="192x192" href="/app-icon-192x192.png">
 
     <title>Fevermap</title>
     <meta name="theme-color" content="#ff7a04" />
