Poc of changeable urls

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -34,5 +34,6 @@
 <fevermap-root></fevermap-root>
 
 <noscript><p>This page relies on javascript. Please enable javascript to use this page.</p></noscript>
+<script type="text/javascript" src="/window-settings.js"></script>
 <script type="text/javascript" src="/main.js"></script></body>
 </html>
