Add Press Kit secion to website footer

--- a/index.html
+++ b/index.html
@@ -126,8 +126,21 @@
           </a>
         </div>
         <div class="contact-container">
-        <h4>contact</h4>
-        <a href="mailto:contact@fevermap.net">contact@fevermap.net</a>
+        <h4>Contact</h4>
+        <ul>
+          <li><a href="mailto:contact@fevermap.net">contact@fevermap.net</a></li>
+          <li><small><a href="tel:+358445426818">+358445426818 / Tuuli Elonen</a></small></li>
+          <li><small><a href="tel:+358445662204">+358445662204 / Otto Kekäläinen</a></small></li>
+          <li><small><a href="tel:+358407770066">+358407770066 / Mika Martikainen</a></small></li>
+        </ul>
+        </div>
+        <div class="press-kit-container">
+        <h4>Press Kit</h4>
+        <ul>
+          <li><a href="images/ui-overview.png">ui-overview.png</a></li>
+          <li><a href="images/logo.png">logo.png</a></li>
+          <li><a href="images/logo.svg">logo.svg</a></li>
+        </ul>
         </div>
       </footer>
     </main>
