Improve landing page responsiveness

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
       </section>
       <section id="presentations">
         <h2>Learn more</h2>
-        <iframe id="slideshare" src="https://www.slideshare.net/slideshow/embed_code/key/C2052GZlGB2PxU" width="490" height="400" frameborder="0" scrolling="no" allowfullscreen> </iframe>
+        <iframe id="slideshare" src="https://www.slideshare.net/slideshow/embed_code/key/C2052GZlGB2PxU" width="550" height="400" frameborder="0" scrolling="no" allowfullscreen> </iframe>
         <iframe id="youtube" width="711" height="400" src="https://www.youtube.com/embed/7wqdTifGiPc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p id="caption"><strong>See how Fevermap works in action</strong></p>
       </section>
       <footer>
         <div class="soc-wrapper">
@@ -137,9 +138,9 @@
         <div class="press-kit-container">
         <h4>Press Kit</h4>
         <ul>
-          <li><a href="images/ui-overview.png">ui-overview.png</a></li>
-          <li><a href="images/logo.png">logo.png</a></li>
-          <li><a href="images/logo.svg">logo.svg</a></li>
+          <li><small><a href="images/ui-overview.png">UI overview</a></small></li>
+          <li><small><a href="images/logo.png">Fevermap logo (png)</a></small></li>
+          <li><small><a href="images/logo.svg">Fevermap logo (svg)</a></small></li>
         </ul>
         </div>
       </footer>
