Publish app launcher button on website
Move mailing list signup to separate section.

--- a/index.html
+++ b/index.html
@@ -31,23 +31,21 @@
       <section id="main">
         <p>Our goal is to help citizens, communities, and society as a whole in the fight against the coronavirus pandemic. The current scale of testing does not allow healthcare professionals to monitor the spread of the virus well enough.</p>
         <p>The Fevermap is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.</p>
-        <p><strong>Sign up to get an announcement when we launch!</strong></p>
-        <!-- a class="cta" href="https://dev.fevermap.net">Test our to Fevermap</a -->
-      </section>
-      <section id="signup">
-        <div id="phplistsubscriberesult"></div>
-        <form action="https://fevermap.hosted.phplist.com/lists/?p=subscribe&id=1" method="post" id="phplistsubscribeform">
-          <input type="text" name="email" value="" id="emailaddress" placeholder="email@example.com" />
-          <button type="submit" id="phplistsubscribe" class="cta">Sign up</button>
-        </form>
+        <h4>Start using</h4>
+        <p>To participate, just report your fever and other symptoms anonymously once a day on the app.</p>
+        <a class="cta" href="https://app.fevermap.net/?installApp=true">Launch the Fevermap app</a>
       </section>
       <div class="spacer"></div>
       <section class="breaker">
         <h2>How you can help</h2>
         <div class="flex-wrapper">
           <div class="flex-item">
-            <h4>Sign up &amp; start using</h4>
-            <p>To participate, just report your fever and other symptoms anonymously once a day on the app. We will launch very soon. Stay tuned!</p>
+            <h4>Subscribe to announcements</h4>
+            <div id="phplistsubscriberesult"></div>
+            <form action="https://fevermap.hosted.phplist.com/lists/?p=subscribe&id=1" method="post" id="phplistsubscribeform">
+              <input type="text" name="email" value="" id="emailaddress" placeholder="email@example.com" />
+              <button type="submit" id="phplistsubscribe" class="cta">Sign up</button>
+            </form>
           </div>
           <div class="flex-item">
             <h4>Tell your friends</h4>
