Rework main page above the fold section to better promote the app

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fevermap</title>
+    <title>Fevermap: tracking the COVID-19 situation around the world</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160636162-1"></script>
@@ -26,14 +26,17 @@
     </div>
 
     <main>
-      <h1>Mission</h1>
-
-      <section id="main">
-        <p>Our goal is to help citizens, communities, and society as a whole in the fight against the coronavirus pandemic. The current scale of testing does not allow healthcare professionals to monitor the spread of the virus well enough.</p>
-        <p>The Fevermap is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data that helps them fight the pandemic.</p>
-        <h4>Start using</h4>
-        <p>To participate, just report your fever and other symptoms anonymously once a day on the app.</p>
+      <section>
+        <h2>Use the app 10 seconds a day</h2>
         <a class="cta" href="https://app.fevermap.net/?installApp=true">Launch the Fevermap app</a>
+        <p>To participate, just report your fever and other symptoms anonymously once a day on the app.</p>
+        <p>Available in 14 languages!</p>
+        <img src="images/ui-overview.png" alt="UI overview" id="ui">
+      </section>
+      <section class="mission">
+        <h2>Mission: track the spread of COVID-19</h2>
+        <p>Our goal is to help citizens, communities, and society as a whole in the fight against the coronavirus pandemic. The current scale of testing does not allow healthcare professionals to monitor the spread of the virus well enough, as a large amount of the affected are not tested at all.</p>
+        <p>The Fevermap is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data on how many people are sick, and if the number is increasing or decreasing.</p>
       </section>
       <div class="spacer"></div>
       <section class="breaker">
