Add FAQ page to website

--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fevermap: tracking the COVID-19 situation around the world</title>
+    <title>Fevermap: Frequently asked questions</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160636162-1"></script>
@@ -26,61 +26,86 @@
     </div>
 
     <main>
-      <section>
-        <h2>Use the app 10 seconds a day</h2>
-        <a class="cta" href="https://app.fevermap.net/?installApp=true">Launch the Fevermap app</a>
-        <p>To participate, just report your fever and other symptoms anonymously once a day on the app.</p>
-        <p>Available in 14 languages!</p>
-        <img src="images/ui-overview.png" alt="UI overview" id="ui">
-      </section>
       <section class="mission">
-        <h2>Mission: track the spread of COVID-19</h2>
-        <p>Our goal is to help citizens, communities, and society as a whole in the fight against the coronavirus pandemic. The current scale of testing does not allow healthcare professionals to monitor the spread of the virus well enough, as a large amount of the affected are not tested at all.</p>
-        <p>The Fevermap is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data on how many people are sick, and if the number is increasing or decreasing.</p>
-        <p>Read more: <a href="faq.html">Frequently asked questions</a></p>
+        <h2>Frequently asked questions</h2>
+
+        <p>On this page we answer the most commonly asked questions about the Fevermap.</p>
+
+        <h3>Is fever a reliable symptom of the Corona virus?</h3>
+
+        <p>Fever is the most common symptom of COVID-19 (=SARS-CoV-2) and many other serious infections. It is also possible to have a feverless COVID-19. Howerver, the purpose of this app is not to diagnose COVID-19. The app is not a medical device. The <strong>purpose is to map the extent of the pandemia</strong> and collect data of the outbreak expanding or slowing down, so that <strong>authorities would better know if their measures are enough</strong>, or if more measures are needed. For this situational awareness we do not need to know exactly who are infected by COVID-19, as tracking it with <strong>fever as a proxy is accurate enough</strong>.</p>
+
+        <h3>Is the number of confirmed COVID-19 cases or deaths a reliable number for decision making?</h3>
+
+        <p>The current number of COVID-19 cases in the media stem from registered cases of COVID-19 tested positive patients. The number of deaths are based on how many deaths were attributed to COVID-19 by the coroner. Neither number is anywhere near the true number of COVID-19 cases out there. Estimates of real figures vary with an order of a magnitude depending on the expert, which makes them highly inaccurate.</p>
+
+        <p>Both numbers are also inconvenient for authrities to base any decisions on, since they are resistered on a delay of up to two weeks after the person got infected. Deaths attributed to COVID-19 are registered even later, maybe months in after the infection itself.</p>
+
+        <h3>Why do you focus on fever?</h3>
+
+        <p>All serious cases of COVID-19 include fever. People who have fever are unable to work and might require medical attention, no matter of the root cause or disease. Having the number of people with fever is valuable information to authorities no matter if it was Corona, SARS, MERS, Ebola or a severe case of regular influenza. If the number of fever cases in an area go up on a population level, authorities need to react to it.</p>
+        <p>Rising body temperatures can also serve as an early warning when the outbreak is still developing. With enought data, we could even forecast the outbreaks before they happen up to 10 days before people start seeking treatment and become officially registered cases.</p>
+
+        <h3>What scientific studies exists to back up the approach of Fevermap?</h3>
+
+        <p>The thermometer manufacturer Kinsa publishes data from their own devices at <a href="https://healthweather.us/?mode=Atypical">healthweather.us</a>. During March 2020 they were able to accurately predict which locations in the US would have most COVID-19 cased before patients started seeking medical care. The map only exists for the US and is based only on measurements from Kinsa's devices. Fevermap can do this anywhere in the world with any device.</p>
+
+        <p>The service <a href="https://covidnearyou.org/">covidnearyou.org by Harward Medical School</a> is doing symptom tracking somewhat similar to the Fevermap, but based on a web questionare and only in the US.</p>
+
+        <p>We are on the lookout for academic peer reviewed articles on the topic. If you are a researcher and what to use our data in your next publication, please contact us and we will help you.</p>
+
+        <h3>Is the app only for people with symptoms or can healthy people also participate?</h3>
+
+        <p>Anybody can participate! We courage healthy people to track their baseline temperature with Fevermap. If you do get sick and require medical care, showing your temperature and symptoms history from the Fevermap app to a medical professional can be useful.</p>
+
+
+        <h3>Do you consider it fever at 37.5, 38.0 or 38.5 degrees Celcius?</h3>
+
+        <p>A thermotere reading is objective in the sense that you can measure it at home, and you will get a number out of your measurement. It is not just based on a feeling or subjective call on if you think your cough is continuous or not. However, the number may vary based on many factors: is the thermometer calibrated and accurate, which part of the body was the measurement taken from, did you have stress prior to the measurement, was is in the morning or in the evening etc. Different people have different baseline temperatures and some people might have fever when their temperature goes from 36 to 37,5 degrees Celcius, while for other persons fever could set in only at 38,5 degrees.</p>
+
+        <p>The Fevermap application is not a medical device and we do not diagnose if you have fever or any disease. We simply collect the temperature data and based on how it on average changes for people in a certain area we are able to make estimates on the outbreak situation given enough data.</p>
+
+        <h3>Do you ask questions about other symptoms as well?</h3>
+
+        <p>Yes, we also ask about cough, respiratory symptoms, sore throat and muscle pain.</p>
+        <p>For demographical information we ask for age and gender.</p>
+
+        <p>The additional questions help in validating the data and making analysis of it, but fever is our main metric because it is something anybody can measure at home and it is as objective as a self-reported data point can be.</p>
+
+        <p>There is also no authentication in the regular public version for the same reasons: we want to make the barrier to participate as low as possible.</p>
+
+        <h3>Why not ask more questions?</h3>
+
+        <p>Our focus is on simplicity and a maximal volume of data points. We want to keep our participants enganged and return to the app for 10 seconds a day. Asking too many questions could decrease the number of participants, and we value quantity over quality.</p>
+
+        <p>This is not a self-diagnosis tool. Seek medical care if you need a diagnosis.</p>
+
+        <h3>Do you track users location?</h3>
+
+        <p>When users submit their temperature, we also store the location of that time. There is no on-going location tracking. When submitting their symptoms, users fill in their city and zip code, or opt to use the automatic location lookup that stores the users location on a similar granularity (~100 meter accurancy).</p>
+
+        <p>The Fevermap is not a contact tracing solution. Fevermap helps authorities with situational awareness midst a full scale outbreak.</p>
+
+        <p>For tracing solutions we recommend checking out the <a href="https://bluetrace.io/">BlueTrace from Singapore's TraceTogether app, or <a href="https://wetrace.ch/">WeTrace</a> from Switzerland, both open source software any government can adopt quickly if needed.</p>
+
+        <h3>If usage of the app is anonymous, how do you prevent false/spoofed submissions?</h3>
+
+        <p>We have limitations in place regaring how many submissions single IP addresses can send, and we develop methods to discard statistical outliers and other methods to prefent fraudulent submissions.</p>
+
+        <p>If a governmental collaborator so whishes, we can also make a local version of Fevermap that has authentication or other custom features to increase the value of the solution to the authority using it.</p>
+
+        <h3>What countries or languages is the Fevermap app available in?</h3>
+
+        <p>Fevermap was born global and is available anywhere there is an Internet connection. Currently we have 14 languages but new translations are added all the time.</p>
+
+        <h3>Which authorities use the Fevemap data in their decision making process?</h3>
+
+        <p>None yet. There are talks going on, and we hope to announce collaborations soon. Please note Fevermap was developed and launched in just about 2 weeks, which is exceptional for any kind of sofware project.</p>
+
+        <p><strong>Please contact us if you represent an authority that wants to benefit from Fevermap in your own administrative region.</strong></p>
+
       </section>
       <div class="spacer"></div>
-      <section class="breaker">
-        <h2>How you can help</h2>
-        <div class="flex-wrapper">
-          <div class="flex-item">
-            <h4>Subscribe to announcements</h4>
-            <div id="phplistsubscriberesult"></div>
-            <form action="https://fevermap.hosted.phplist.com/lists/?p=subscribe&id=1" method="post" id="phplistsubscribeform">
-              <input type="text" name="email" value="" id="emailaddress" placeholder="email@example.com" />
-              <button type="submit" id="phplistsubscribe" class="cta">Sign up</button>
-            </form>
-          </div>
-          <div class="flex-item">
-            <h4>Tell your friends</h4>
-            <p>Follow our social media accounts and share our announcements:
-              <ul>
-                <li><a href="https://twitter.com/fevermap">Twitter</a></li>
-                <li><a href="https://www.instagram.com/fevermap/">Instagram</a></li>
-                <li><a href="https://www.facebook.com/Fevermap-106608140981693/">Facebook</a></li>
-                <li><a href="https://www.youtube.com/channel/UCSGgeNTHswP5alT1NXu-SfA">Youtube</a></li>
-              </ul>
-            </p>
-          </div>
-          <div class="flex-item">
-            <h4>Collaborate with us</h4>
-            <p>If you represent a health authority and would like to have this app deployed in your region, please send us email at <a href="mailto:contact@fevermap.net">contact@fevermap.net</a>.</p>
-            <p>If you represent some other organization that could benefit of this, work on similar technology or for whatever reason want to collaborate, contact us by email on the address above. We are open to collaboration!</p>
-            <a class="cta" href="https://join.slack.com/t/hackthecrisisfinland/shared_invite/zt-cv34hdk4-hI9chEn0cUF~MAQBFqCvhg">Join Slack</a>
-          </div>
-          <div class="flex-item">
-            <h4>Develop and analyze</h4>
-            <p>We invite all open source and open data minded people to contribute to this effort in fighting the Corona virus outbreak with software.</p>
-            <a class="cta" href="https://gitlab.com/fevermap/fevermap/">View on GitLab</a>
-          </div>
-        </div>
-      </section>
-      <section id="presentations">
-        <h2>Learn more</h2>
-        <iframe id="slideshare" src="https://www.slideshare.net/slideshow/embed_code/key/C2052GZlGB2PxU" width="550" height="400" frameborder="0" scrolling="no" allowfullscreen> </iframe>
-        <iframe id="youtube" width="711" height="400" src="https://www.youtube.com/embed/7wqdTifGiPc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p id="caption"><strong>See how Fevermap works in action</strong></p>
-      </section>
       <footer>
         <div class="soc-wrapper">
           <a href="https://twitter.com/fevermap" aria-label="twitter account">
