Update new UI images to website and press kit (Closes: #70)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a class="cta" href="https://app.fevermap.net/?installApp=true">Launch the Fevermap app</a>
         <p>To participate, just report your fever and other symptoms anonymously once a day on the app.</p>
         <p>Available in 14 languages!</p>
-        <img src="images/ui-overview.png" alt="UI overview" id="ui">
+        <img src="images/ui-overview-web.png" alt="UI overview" id="ui">
       </section>
       <section class="mission">
         <h2>Mission: track the spread of COVID-19</h2>
