Add preview image to app

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -17,6 +17,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="msapplication-starturl" content="/">
 
+    <meta itemprop="image" content="/hero.png">
+    <meta property="og:image" content="/hero.png" />
+    <meta name="twitter:image" content="/hero.png">
+
     <link rel="icon" type="png" sizes="64x64" href="/icon-64x64.png">
     <link rel="apple-touch-icon" type="png" sizes="72x96" href="/app-icon-72x72.png">
     <link rel="icon" type="png" sizes="96x96" href="/icon-96x96.png">
