--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,12 @@
       gtag('config', 'UA-160636162-1');
     </script>
 
+    <link rel="icon" type="image/svg+xml"
+     href="/images/favicon.svg">
+    <meta itemprop="image" content="hero.png">
+    <meta property="og:image" content="hero.png">
+    <meta name="twitter:image" content="hero.png">
+
     <link rel="stylesheet" href="index.css">
   </head>
 
